<resources>
    <string name="app_name">BD</string>
    <array name="menuOptions">
        <item>Book</item>
        <item>Point issue</item>
        <item>Read room</item>
        <item>Reader card</item>
        <item>Reader</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="idString">ID</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="time_to_return_book">Time to return book</string>
    <string name="year_release_book">Year release book</string>
    <string name="date_issue">Date issue</string>
</resources>