<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Button
        android:id="@+id/bookItemAddApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bookItemAddDeny"/>

    <Button
        android:id="@+id/bookItemAddDeny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookItemAddApply"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/bookItemAddEditTextIdBook"
        android:text="@string/idString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddApply"/>
    <EditText
        android:id="@+id/bookItemAddEditIdBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditTextIdBook"/>

    <TextView
        android:id="@+id/bookItemAddEditTextNameBook"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditIdBook"/>
    <EditText
        android:id="@+id/bookItemAddEditNameBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditTextNameBook" />
    <TextView
        android:id="@+id/bookItemAddEditTextAuthorBook"
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditNameBook"/>
    <EditText
        android:id="@+id/bookItemAddEditAuthorBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditTextAuthorBook" />
    <TextView
        android:id="@+id/bookItemAddEditTextYearReleaseBook"
        android:text="@string/year_release_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditAuthorBook"/>

    <EditText
        android:id="@+id/bookItemAddEditYearRealeaseBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditTextYearReleaseBook" />
    <TextView
        android:id="@+id/bookItemAddEditTextYearToLibraryBook"
        android:text="@string/time_to_return_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditYearRealeaseBook"/>

    <EditText
        android:id="@+id/bookItemAddEditYearToLibraryBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditTextYearToLibraryBook" />
    <TextView
        android:id="@+id/bookItemAddEditTextDateIssueBook"
        android:text="@string/date_issue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditYearToLibraryBook"/>

    <EditText
        android:id="@+id/bookItemAddEditDateIssueBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditTextDateIssueBook" />
    <Button
        android:id="@+id/bookItemAddExamplar"
        android:text="Add Examplar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddEditDateIssueBook"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addRVCopies"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookItemAddExamplar" />

</androidx.constraintlayout.widget.ConstraintLayout>